syntax = "proto3";

package book;

message Book {
  int32 id = 1;
  string title = 2;
  string author = 3;
}

message GetBookRequest {
  int32 id = 1;
}

message GetBookResponse {
  Book book = 1;
}

message AddBookRequest {
  string title = 1;
  string author = 2;
}

message AddBookResponse {
  Book book = 1;
}

service BookService {
  rpc GetBook(GetBookRequest) returns (GetBookResponse);
  rpc AddBook(AddBookRequest) returns (AddBookResponse);
}
